--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "expo": "^33.0.7",
+    "expo-cli": "^3.0.8",
+    "expo-image-picker": "^6.0.0",
+    "expo-permissions": "~5.0.1",
     "global": "^4.4.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
